Fix sidebar horisontal overflow

--- a/src/app/vm/vm-list/vm-list.component.scss
+++ b/src/app/vm/vm-list/vm-list.component.scss
@@ -26,6 +26,5 @@ cs-vm-detail {
 }
 
 cs-vm-sidebar {
-  border-left: 1px solid #E0E0E0;
   width: $vm-detail-width;
 }
